Fixes: Coloring Book: Add new pictures Coloring Book: Pictures don't fit in height Memory: Add new pictures Puzzles: Make the hint brighter Puzzles: Fix bug where the hint is not centered (only reproducible on TV) Check precache of all games without internet access Load updated precache if available

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,8 +34,11 @@ canvas#buffer {
 }
 
 canvas#image-preview.show {
-    left: 50%;
-    opacity: .5;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
     z-index: 1000;
     pointer-events: none;
 }
